--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
 
+<html>
+  <head>
+  <title> Hacked BY Yusuf </title>
+    </head>
+  
+  <body>
+    <script>alert("Subdomain Takeover BY YusufAli")</script>
+    <h2> Subdomain Takeover BY Yusuf_Ali </h2>
+    </body>
+  </head>
+</html>
+  
