--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     </head>
   
   <body>
-    <script>alert("Subdomain Takeover BY YusufAli")</script>
+    <script>alert(document.domain)</script>
     <h2> Subdomain Takeover BY Yusuf_Ali </h2>
     </body>
-  </head>
 </html>
   
